Edited both index and styles
I have given the css file more colour and used flex box for the navbar. Changed the words for links

--- a/home/index.html
+++ b/home/index.html
@@ -10,17 +10,18 @@
     </head>
     <body>
         <header>
-            <div class="navigation-background">
+            <nav class="navigation-background">
                 <div class="navigation">
-                    Home 
-                    About
-                    What we do
-                    Contact
+                    <ul><li><a href="#">Home</a></li></ul>
+                    <ul><li><a href="#">About</a></li></ul>
+                    <ul><li><a href="#">What we do</a></li></ul>
                 </div>
-            </div>
+                <a class="Contact" href="#"><button>Contact</button></a>
+            </nav>
         </header>
         <div class="greetings">
-            Welcome to WebNotes
+            Welcome to
+            WebNotes
         </div>
     </body>
 </html>
