Connected each page and added it into a directory

--- a/src/index.html
+++ b/src/index.html
@@ -12,11 +12,11 @@
         <header>
             <nav class="navigation-background">
                 <div class="navigation">
-                    <ul><li><a href="#">Home</a></li></ul>
-                    <ul><li><a href="#">About</a></li></ul>
-                    <ul><li><a href="#">What we do</a></li></ul>
+                    <ul><li><a href="./index.html">Home</a></li></ul>
+                    <ul><li><a href="./about.html">About</a></li></ul>
+                    <ul><li><a href="./what we do.html">What we do</a></li></ul>
                 </div>
-                <a class="Contact" href="#"><button>Contact</button></a>
+                <a class="Contact" href="./contact.html"><button>Contact</button></a>
             </nav>
         </header>
         <div class="greetings">
