--- a/src/about.html
+++ b/src/about.html
@@ -19,5 +19,14 @@
                 <a class="Contact" href="./contact.html"><button>Contact</button></a>
             </nav>
         </header>
+        <div class="aboutme">
+            <div class="img">
+
+            </div>
+            <div class="summary">
+                Hi there! My name is Edward Naidoo, the creator of this website and 
+                Webnotes! It is my pleasure to present to you a user friendly product!
+            </div>
+        </div>
     </body>
 </html>
