Changed the names for each page

--- a/src/about.html
+++ b/src/about.html
@@ -5,7 +5,7 @@
         <meta charset = "UTF-8">
         <meta name = "description" content = "About - WebNotes">
         <title>
-            WebNotes
+            About - WebNotes
         </title>
     </head>
     <body>
