--- a/src/what we do.html
+++ b/src/what we do.html
@@ -5,7 +5,7 @@
         <meta charset = "UTF-8">
         <meta name = "description" content = "What we do - WebNotes">
         <title>
-            WebNotes
+            What we do - WebNotes
         </title>
     </head>
     <body>
