--- a/src/contact.html
+++ b/src/contact.html
@@ -5,7 +5,7 @@
         <meta charset = "UTF-8">
         <meta name = "description" content = "Contact - WebNotes">
         <title>
-            WebNotes
+            Contact - WebNotes
         </title>
     </head>
     <body>
