--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
         <meta charset = "UTF-8">
         <meta name = "description" content = "Home - WebNotes">
         <title>
-            WebNotes
+            webnotes.com
         </title>
     </head>
     <body>
