--- a/src/about.html
+++ b/src/about.html
@@ -26,6 +26,8 @@
             <div class="summary">
                 Hi there! My name is Edward Naidoo, the creator of this website and 
                 Webnotes! It is my pleasure to present to you a user friendly product!
+
+                (This product does not exist and is a way to show my skills for making a website)
             </div>
         </div>
     </body>
