--- a/src/index.html
+++ b/src/index.html
@@ -50,7 +50,7 @@
                 <a class="Contact" href="./contact.html"><button>Contact</button></a>
             </nav>
             <div class="cpy">
-                @Copyrights 2022 - webnotes.com (not a real website)
+                @Copyrights 2022 - webnotes.w3spaces.com 
             </div>
             <div class="credits">
                 Made by Edward Naidoo
